--- a/README.org
+++ b/README.org
@@ -20,6 +20,12 @@ docker run --rm -v $PWD:/org w08r/org-publishing:0.0.1 \
        (org-latex-export-to-pdf))'
 #+end_src
 
+* Contents
+** Part 1 -- Hello Worlds
+   [[file:./001--hello-world.org][Hello, World!]]
+** Part 2 -- Reproducible Research
+* Contributions
+  Contributions are welcome, please open an issue for discussion. Please be nice.
 * Footnotes
 
 [fn:1] Org mode is for keeping notes, maintaining to-do lists, planning projects, authoring documents, computational notebooks, literate programming and more — in a fast and effective plain text system. https://orgmode.org/
