Add pretty output

--- a/README.org
+++ b/README.org
@@ -13,7 +13,7 @@ obtained from docker hub.
 For example, to run the hello world org file, run the following:
 
 #+begin_src shell
-docker run --rm -v $PWD:/org w08r/org-publishing:0.0.1 \
+docker run --rm -v $PWD:/org w08r/org-publishing:0.0.2 \
    emacs --batch --eval '
      (progn
        (find-file "/org/001--hello-world.org")
@@ -22,8 +22,10 @@ docker run --rm -v $PWD:/org w08r/org-publishing:0.0.1 \
 
 * Contents
 ** Part 1 -- Hello Worlds
-   [[file:./001--hello-world.org][Hello, World!]]
+  - [[file:./001--hello-world.org][Hello, World!]]
+  - [[file:./002--pretty.org][Pretty, oh so pretty...]]
 ** Part 2 -- Reproducible Research
+** Part 3 -- Presentations with Beamer
 * Contributions
   Contributions are welcome, please open an issue for discussion. Please be nice.
 * Footnotes
